--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".view.fragment.LocationFragment">
 
+
     <android.support.constraint.Guideline
         android:id="@+id/location_guide_line"
         android:layout_width="wrap_content"
@@ -32,5 +33,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/location_guide_line" />
+
+    <ImageView
+        android:id="@+id/profile_test"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toBottomOf="@id/location_guide_line"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/test" />
 
 </android.support.constraint.ConstraintLayout>
