--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -34,12 +34,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/location_guide_line" />
 
-    <ImageView
-        android:id="@+id/profile_test"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@id/location_guide_line"
+        android:layout_height="0dp"
+        android:text="여기는 Location Fragment"
+        android:textSize="30sp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/test" />
-
+        app:layout_constraintBottom_toTopOf="@id/location_guide_line"/>
 </android.support.constraint.ConstraintLayout>
