--- a/app/src/main/res/layout/chat_list_item_view.xml
+++ b/app/src/main/res/layout/chat_list_item_view.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/profile_chat_list_image_view"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/img_4820"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/chat_list_profile_image_view"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/test"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/room_name_text_view"
+        android:id="@+id/chat_list_room_nick_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:text="chattingRoomNickName"
         android:textSize="20sp"
-        app:layout_constraintLeft_toRightOf="@id/profile_chat_list_image_view"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@id/chat_list_profile_image_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/last_message_text_view"
+        android:id="@+id/chat_list_last_message_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@id/room_name_text_view"
-        app:layout_constraintLeft_toRightOf="@id/profile_chat_list_image_view"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="5dp"
+        android:text="chattingRoomLastMessage"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/chat_list_profile_image_view"
+        app:layout_constraintTop_toBottomOf="@id/chat_list_room_nick_name_text_view" />
 
 </android.support.constraint.ConstraintLayout>
