signUp View added

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,31 +13,23 @@
             android:id="@+id/loginTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="21dp"
-            android:fontFamily="@font/aller_bd"
+            android:layout_marginTop="160dp"
+            android:fontFamily="@font/hel_bold"
             android:text="Log in"
-            android:textSize="70sp"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="60sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="84dp"
-            android:src="@drawable/backpack"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
+            android:backgroundTint="@android:color/darker_gray"
             android:ems="10"
             android:fontFamily="@font/aller_rg"
             android:hint="아이디를 입력해주세요"
@@ -49,16 +41,18 @@
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/darker_gray"
             android:textColorLink="?attr/colorButtonNormal"
+            android:textCursorDrawable="@android:color/darker_gray"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@android:color/darker_gray"
             android:ems="10"
             android:fontFamily="@font/aller_rg"
             android:hint="비밀번호를 입력해주세요"
@@ -66,6 +60,7 @@
             android:outlineAmbientShadowColor="?attr/colorButtonNormal"
             android:textAlignment="center"
             android:textColorLink="?attr/colorButtonNormal"
+            android:textCursorDrawable="@android:color/darker_gray"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,10 +70,11 @@
             android:id="@+id/signUpTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginTop="32dp"
             android:clickable="true"
-            android:text="아직 회원이 아니신가요"
+            android:text="아직 회원이 아니신가요?"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
@@ -87,7 +83,7 @@
             android:id="@+id/signInTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="40dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginTop="16dp"
             android:clickable="true"
             android:text="Get Started"
