--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,53 +1,302 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activity.SignUpActivity">
+    android:background="@color/cardview_light_background"
+    tools:context=".view.activity.SignUpActivity"
+    tools:layout_editor_absoluteY="81dp">
 
-    <ImageView
-        android:id="@+id/sign_up_profile_image_view"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"
-        android:background="#ff229988"/>
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/cardview_light_background">
 
-    <EditText
-        android:id="@+id/sign_up_id_edit_text"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sign_up_profile_image_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="70dp"/>
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/stroke_lower"
+            android:ems="10"
+            android:fontFamily="@font/hel_basic"
+            android:hint="enter your name"
+            android:inputType="textPersonName"
+            android:paddingLeft="50dp"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/name_text"
+            app:layout_constraintTop_toBottomOf="@+id/signUpImageView" />
 
-    <EditText
-        android:id="@+id/sign_up_password_edit_text"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sign_up_id_edit_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"/>
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:background="@drawable/stroke_test"
+            android:ems="10"
+            android:fontFamily="@font/hel_basic"
 
-    <EditText
-        android:id="@+id/sign_up_nick_name_edit_text"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sign_up_password_edit_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"/>
+            android:hint="enter your email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="50dp"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/email_text"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
-    <Button
-        android:id="@+id/sign_up_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_button"/>
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/stroke_lower"
+            android:fontFamily="@font/hel_basic"
+            android:gravity="center"
+            android:text="name"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/signUpImageView" />
+
+        <TextView
+            android:id="@+id/email_text"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+
+            android:background="@android:color/background_light"
+            android:fontFamily="@font/hel_basic"
+            android:gravity="center"
+            android:text="email"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name_text" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/stroke_lower"
+            android:ems="10"
+            android:fontFamily="@font/hel_basic"
+            android:hint="enter your password"
+            android:inputType="textVisiblePassword"
+            android:paddingLeft="50dp"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/password_text"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
+
+        <TextView
+            android:id="@+id/DateofBirth"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/stroke_test"
+            android:fontFamily="@fonts/Swagger"
+            android:textAlignment="center"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/dateOfBirth"
+            app:layout_constraintTop_toBottomOf="@+id/setBack" />
+
+        <TextView
+            android:id="@+id/password_text"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/stroke_lower"
+            android:fontFamily="@font/hel_basic"
+            android:gravity="center"
+            android:text="password"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/email_text" />
+
+        <TextView
+            android:id="@+id/passwordConfirm_text"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="@font/hel_basic"
+            android:gravity="center"
+            android:text="check"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_text" />
+
+        <EditText
+            android:id="@+id/passwordConfirm"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:background="@drawable/stroke_test"
+            android:ems="10"
+            android:fontFamily="@font/hel_basic"
+            android:hint="one more !"
+            android:inputType="textVisiblePassword"
+            android:paddingLeft="50dp"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/passwordConfirm_text"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <TextView
+            android:id="@+id/sex"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="32dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="@font/hel_basic"
+            android:gravity="center"
+            android:text="gender"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm_text" />
+
+        <TextView
+            android:id="@+id/dateOfBirth"
+            android:layout_width="70dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="@fonts/Swagger"
+            android:gravity="center"
+            android:text="DOB"
+            android:textColor="@color/textColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sex" />
+
+        <Button
+            android:id="@+id/signUpBtn"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+
+            android:layout_marginTop="32dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="@fonts/Swagger"
+            android:onClick="onClickedSend"
+            android:text="get started"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/DateofBirth" />
+
+        <TextView
+            android:id="@+id/setBack"
+            android:layout_width="0dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="32dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="@fonts/Swagger"
+            android:textColor="@color/textColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/sex"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />
+
+        <RadioGroup
+            android:id="@+id/radio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/setBack"
+            app:layout_constraintStart_toStartOf="@+id/setBack"
+            app:layout_constraintTop_toBottomOf="@+id/setBack">
+
+            <RadioButton
+                android:id="@+id/radioBtnMan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/hel_basic"
+                android:text="men"
+                android:textAlignment="center"
+                android:textColor="@color/textColor" />
+
+            <RadioButton
+                android:id="@+id/radioBtnWoman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/hel_basic"
+                android:text="woman"
+                android:textAlignment="center"
+                android:textColor="@color/textColor" />
+        </RadioGroup>
+
+        <Spinner
+            android:id="@+id/year"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="48dp"
+            android:dropDownWidth="match_parent"
+            android:spinnerMode="dialog"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/DateofBirth"
+            app:layout_constraintStart_toStartOf="@+id/DateofBirth" />
+
+        <Spinner
+            android:id="@+id/day"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_marginBottom="8dp"
+            android:spinnerMode="dialog"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/DateofBirth"
+            app:layout_constraintStart_toEndOf="@+id/month" />
+
+        <Spinner
+            android:id="@+id/month"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_marginBottom="8dp"
+            android:spinnerMode="dialog"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="@+id/DateofBirth"
+            app:layout_constraintStart_toEndOf="@+id/year" />
+
+        <ImageView
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="@+id/passwordConfirm"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:fontFamily="@font/lee"
+            android:text="sign up"
+            android:textSize="45sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/signUpImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="32dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:srcCompat="@drawable/user" />
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
