--- a/app/src/main/res/layout/activity_welcoming.xml
+++ b/app/src/main/res/layout/activity_welcoming.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:alpha="1"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:tint="@color/cardview_shadow_start_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,10 +22,11 @@
         app:srcCompat="@drawable/balloon" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/signUpText"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_marginBottom="24dp"
+        android:clickable="true"
         android:text="you don't have an account yet?"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
@@ -60,6 +61,23 @@
         app:layout_constraintEnd_toEndOf="@+id/animBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/signInBtn"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:alpha="0.8"
+        android:background="@color/common_google_signin_btn_text_light_default"
+        android:onClick="onSignInClicked"
+        android:text="Sign in"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toTopOf="@+id/signUpText"
+        app:layout_constraintEnd_toStartOf="@+id/animBackground"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/animBackground" />
 
 
 </android.support.constraint.ConstraintLayout>
