--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -6,30 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".view.fragment.LocationFragment">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/location_guide_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
-
-    <TextView
-        android:id="@+id/my_location_text_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/memberRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorPrimary"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/location_guide_line"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"/>
-
-    <ListView
-        android:id="@+id/near_location_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        android:background="@android:color/background_light"
+        android:paddingTop="3dp"
+        android:scrollbars="vertical"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/location_guide_line" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 
 </android.support.constraint.ConstraintLayout>
