--- a/app/src/main/res/layout/member_list_view.xml
+++ b/app/src/main/res/layout/member_list_view.xml
@@ -31,7 +31,7 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/member_discription_text_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -45,10 +45,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/member_name_text_view" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/member_name_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -65,9 +65,9 @@
         android:id="@+id/onButtonImg"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/onbutton" />
+        app:srcCompat="@drawable/onbutton"
+        android:layout_marginLeft="8dp" />
 </android.support.constraint.ConstraintLayout>
