--- a/app/src/main/res/layout/chat_message_view.xml
+++ b/app/src/main/res/layout/chat_message_view.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -18,31 +19,73 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.3" />
 
-    <ImageView
-        android:id="@+id/other_profile_image_view"
+    <android.support.v7.widget.CardView
+        android:id="@+id/messageCardView"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="16dp"
+        android:background="@color/lightGray"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/other_message_text_view"
-        android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/other_profile_image_view"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/otherCardView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toRightOf="@id/other_profile_image_view"
-        app:layout_constraintRight_toLeftOf="@id/guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/lightGray"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintStart_toEndOf="@+id/messageCardView"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/my_message_text_view"
-        android:layout_width="0dp"
+        <TextView
+            android:id="@+id/other_message_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="@color/lightGray"
+            android:fontFamily="@font/hel_bold"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toEndOf="@+id/messageCardView"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/myCardView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="right"
-        app:layout_constraintLeft_toRightOf="@id/guideline2"
+        app:cardCornerRadius="6dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/my_message_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="@color/cBlue"
+            android:gravity="right"
+            android:textSize="24sp"
+            app:layout_constraintLeft_toRightOf="@id/guideline2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
