--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,11 +21,12 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/stroke_lower"
             android:ems="10"
-            android:fontFamily="@font/hel_basic"
-            android:hint="enter your name"
+            android:textCursorDrawable="@android:color/darker_gray"
+            android:fontFamily="@font/aller_rg"
             android:inputType="textPersonName"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/name_text"
@@ -37,39 +38,42 @@
             android:layout_height="49dp"
             android:background="@drawable/stroke_test"
             android:ems="10"
-            android:fontFamily="@font/hel_basic"
-
-            android:hint="enter your email"
+            android:fontFamily="@font/aller_rg"
+            android:textCursorDrawable="@android:color/darker_gray"
             android:inputType="textEmailAddress"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/email_text"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <TextView
             android:id="@+id/name_text"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/stroke_lower"
-            android:fontFamily="@font/hel_basic"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
             android:text="name"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/signUpImageView" />
 
         <TextView
             android:id="@+id/email_text"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
 
             android:background="@android:color/background_light"
-            android:fontFamily="@font/hel_basic"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
             android:text="email"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_text" />
 
@@ -80,12 +84,14 @@
             android:layout_marginTop="32dp"
             android:background="@drawable/stroke_lower"
             android:ems="10"
-            android:fontFamily="@font/hel_basic"
-            android:hint="enter your password"
+            android:textCursorDrawable="@android:color/darker_gray"
+            android:fontFamily="@font/aller_rg"
             android:inputType="textVisiblePassword"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/password_text"
             app:layout_constraintTop_toBottomOf="@+id/email" />
 
@@ -105,26 +111,28 @@
 
         <TextView
             android:id="@+id/password_text"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/stroke_lower"
-            android:fontFamily="@font/hel_basic"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
             android:text="password"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
         <TextView
             android:id="@+id/passwordConfirm_text"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
             android:background="@android:color/background_light"
-            android:fontFamily="@font/hel_basic"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
             android:text="check"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_text" />
 
@@ -134,11 +142,12 @@
             android:layout_height="49dp"
             android:background="@drawable/stroke_test"
             android:ems="10"
-            android:fontFamily="@font/hel_basic"
-            android:hint="one more !"
+            android:textCursorDrawable="@android:color/darker_gray"
+            android:fontFamily="@font/aller_rg"
             android:inputType="textVisiblePassword"
             android:paddingLeft="50dp"
             android:textColor="@color/textColor"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/passwordConfirm_text"
@@ -146,27 +155,29 @@
 
         <TextView
             android:id="@+id/sex"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_marginTop="32dp"
             android:background="@android:color/background_light"
-            android:fontFamily="@font/hel_basic"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
             android:text="gender"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordConfirm_text" />
 
         <TextView
             android:id="@+id/dateOfBirth"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/background_light"
-            android:fontFamily="@fonts/Swagger"
+            android:fontFamily="@font/aller_rg"
             android:gravity="center"
-            android:text="DOB"
+            android:text="date of birth"
             android:textColor="@color/textColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sex" />
 
@@ -212,23 +223,26 @@
 
             <RadioButton
                 android:id="@+id/radioBtnMan"
-                android:layout_width="wrap_content"
+                style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/hel_basic"
+                android:fontFamily="@font/aller_rg"
                 android:text="men"
                 android:textAlignment="center"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/textColor"
+                android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/radioBtnWoman"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/hel_basic"
+                android:fontFamily="@font/aller_rg"
                 android:text="woman"
                 android:textAlignment="center"
-                android:textColor="@color/textColor" />
+                android:textColor="@color/textColor"
+                android:textSize="18sp" />
         </RadioGroup>
 
         <Spinner
@@ -276,12 +290,11 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:fontFamily="@font/lee"
-            android:text="sign up"
-            android:textSize="45sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/aller_bd"
+            android:text="Sign Up"
+            android:textSize="36sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
