ChatView fixed and mapview deleted on member detail

--- a/app/src/main/res/layout/activity_member_detail_view.xml
+++ b/app/src/main/res/layout/activity_member_detail_view.xml
@@ -98,14 +98,14 @@
                 android:id="@+id/memberCardView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="20dp"
                 app:cardCornerRadius="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/mapView">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/profileImg"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
@@ -126,7 +126,7 @@
                 android:id="@+id/nameAndAgeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/aller_bd"
                 android:text="BUM, 25(M)"
@@ -140,7 +140,7 @@
                 android:id="@+id/jobTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/aller_rg"
                 android:text="soongsil University"
@@ -151,7 +151,7 @@
                 android:id="@+id/planTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/aller_bd"
                 android:text="Plan"
